Started work on the nav bar

--- a/index.html
+++ b/index.html
@@ -36,6 +36,26 @@
         </div>
       </header>
 
+      <nav class="navbar navbar-expand-lg navbar-light bg-dark justify-content-left">
+        <div class="container-fluid">
+          
+          <div class = "dropdown">
+          <span>Outstanding Technology</span>
+          <div class = "dropdown-content"> 
+
+            <a> 1</a>
+            <a> 1</a>
+            <a> 1</a>
+            <a> 1</a>
+            <a> 1</a>
+           
+        </div>
+          </div>
+
+        </div>
+      </nav>
+
+
         <main>
 
 
