Further file structuer changes, moved files to partials folder in scss. Fixed minor issues in htm

--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
-<html>
+<!DOCTYPE html>
+<html lang = "en">
 
     <head>
         <link rel="stylesheet" href="css/styles.css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
         <link href="css/bootstrap.css" rel="stylesheet">  
-
+        <title>Netmatters Home</title>
         <script src="https://kit.fontawesome.com/0864f452e1.js" crossorigin="anonymous"></script>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
@@ -15,7 +16,7 @@
       <header class="p-3 bg-light text-black">
         <div class="container">
           <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-            <img src = "img/f-logo.png" class = "logo">
+            <img src = "img/f-logo.png" class = "logo" alt = "netmatters logo">
             <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
               <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"/></svg>
             </a>
@@ -249,7 +250,7 @@
          <div class = "services">
         <h1>Latest News</h1>
           <div class = "news-card1">
-            <img class = "news-image" src = "img/newsimage.webp">
+            <img class = "news-image" src = "img/newsimage.webp" alt = "Image demonstrating role of line support technician">
             <h3>2nd Line Support Technician</h3>
             <p>Salary Range £24k-£30k + Bonuses + Pension Hours 40 hours per week, Monday - Friday Location Cambridge</p>
             <button class="dropbtn-readmore1">READ MORE</button>
@@ -262,7 +263,7 @@
           </div>
 
           <div class = "news-card2">
-            <img class = "news-image" src = "img/newsimage.webp">
+            <img class = "news-image" src = "img/newsimage.webp" alt = "Image demonstrating role of line support technician">
             <h3>Senior Support Technician</h3>
             <p>Salary Range Salary - £30k - £38k Based on Experience Hours 40 hours per week, Monday - Friday Location</p>
             <button class="dropbtn-readmore1">READ MORE</button>
@@ -275,12 +276,12 @@
           </div>
 
           <div class = "news-card3">
-            <img class = "news-image" src = "img/newsimage.webp">
+            <img class = "news-image" src = "img/newsimage.webp" alt = "Image demonstrating role of line support technician">
             <h3>Junior Digital Marketing Executive</h3>
             <p>Salary Range £18k - £23k 40 hours per week, Monday - Friday Location Wymondham, Norfolk</p>
             <button class="dropbtn-readmore1">READ MORE</button>
             <div class = "news-footer"> 
-              <img src = "img/logo.webp" alt = "netmatters logo">
+              <img src = "img/logo.webp" alt = "netmatters logo" >
               <h5>Posted by Netmatters</h5>
               <p>Date: 9th May 2022</p>
     
@@ -299,7 +300,7 @@
           <label for="user-email">Your Email</label>
           <input type="email" class="form-control" id="user-email" placeholder="name@example.com">
           <label for="user-marketing">Please tick this box if you wish to receive marketing information from us. Please see our Privacy Policy for more information on how we use your data.</label>
-          <input type="checkbox" class="form-control" id="user-marketing" placeholder="name@example.com">
+          <input type="checkbox" class="form-control" id="user-marketing">
           <button class="dropbtn-readmore1">Subscribe</button>
         </div>
       </div>
